--- a/requirements.txt
+++ b/requirements.txt
@@ -1,68 +1,9 @@
-astroid==2.4.2
-autopep8==1.5.4
-cairocffi==1.3.0
-CairoSVG==2.5.2
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.12
-click==8.0.3
-cssselect2==0.5.0
-cycler==0.11.0
-defusedxml==0.7.1
+doctr==1.9.0
 Flask==2.0.3
-Flask-Cors==3.0.10
-fonttools==4.30.0
-gunicorn==20.1.0
-h5py==3.6.0
-html5lib==1.1
-idna==3.3
-imageio==2.9.0
+Flask_Cors==3.0.10
 imutils==0.5.4
-isort==5.5.2
-itsdangerous==2.0.1
-jarowinkler==1.0.2
-Jinja2==3.0.3
-kiwisolver==1.3.2
-lazy-object-proxy==1.4.3
-MarkupSafe==2.0.1
 matplotlib==3.4.2
-mccabe==0.6.1
-mplcursors==0.5.1
-networkx==2.7.1
 numpy==1.22.3
-opencv-contrib-python==4.5.5.62
-opencv-python==4.5.5.62
-opencv-python-headless==4.5.5.64
-packaging==21.3
-Pillow==8.2.0
-pyclipper==1.3.0.post2
-pycodestyle==2.6.0
-pycparser==2.21
-pylint==2.6.0
-PyMuPDF==1.19.6
-pyparsing==3.0.7
-pyphen==0.12.0
-python-bidi==0.4.2
-python-dateutil==2.8.2
-python-doctr==0.5.0
-PyWavelets==1.2.0
-PyYAML==6.0
-rapidfuzz==2.0.7
-requests==2.27.1
-scikit-image==0.19.2
-scipy==1.8.0
-Shapely==1.8.1.post1
-six==1.16.0
-tifffile==2022.2.9
-tinycss2==1.1.1
-toml==0.10.1
-torch==1.11.0
-torchvision==0.12.0
-tqdm==4.63.0
-typing_extensions==4.1.1
-Unidecode==1.3.4
-urllib3==1.26.9
-WeasyPrint==52.5
-webencodings==0.5.1
+opencv_python_headless==4.5.5.64
+python_doctr==0.5.0
 Werkzeug==2.0.2
-wrapt==1.12.1
