--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,6 @@ matplotlib==3.4.2
 numpy==1.22.3
 opencv_python_headless==4.5.5.64
 python_doctr==0.5.0
+torch==1.11.0
+torchvision==0.12.0
 Werkzeug==2.0.2
