--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,5 @@ imutils==0.5.4
 matplotlib==3.4.2
 numpy==1.22.3
 opencv_python_headless==4.5.5.64
-python_doctr==0.5.0
-torch==1.11.0
-torchvision==0.12.0
+"python-doctr[torch]"==0.5.0
 Werkzeug==2.0.2
