--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,5 @@ imutils==0.5.4
 matplotlib==3.4.2
 numpy==1.22.3
 opencv_python_headless==4.5.5.64
-"python-doctr[torch]"==0.5.0
+python-doctr[torch]==0.5.0
 Werkzeug==2.0.2
